--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/react": "^16.3.14",
+    "@types/react-data-grid": "^2.0.11",
     "@types/react-dom": "^16.0.5",
     "react": "^16.3.2",
+    "react-data-grid": "^4.0.7",
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
