--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.3.14",
     "@types/react-data-grid": "^2.0.11",
     "@types/react-dom": "^16.0.5",
+    "immutability-helper": "^2.7.0",
     "react": "^16.3.2",
     "react-data-grid": "^4.0.7",
     "react-dom": "^16.3.2"
