--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^22.2.3",
     "awesome-typescript-loader": "^5.0.0",
     "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.0.1",
     "source-map-loader": "^0.2.3",
     "ts-jest": "^22.4.6",
