--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@types/react": "^16.3.14",
     "@types/react-data-grid": "^2.0.11",
     "@types/react-dom": "^16.0.5",
+    "ag-grid": "^17.1.1",
+    "ag-grid-react": "^17.1.0",
     "immutability-helper": "^2.7.0",
     "react": "^16.3.2",
     "react-data-grid": "^4.0.7",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-dom-factories": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
