--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "jsx": "react",
         "module": "commonjs",
         "noImplicitAny": true,
+        "noUnusedLocals": true,
         "outDir": "./dist/",
         "sourceMap": true,
         "target": "es6",
