--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
         "module": "commonjs",
         "newLine": "LF",
         "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
         "noImplicitReturns": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": "./dist/",
         "sourceMap": true,
-        "target": "es6",
+        "strict": true,
+        "target": "es6"
     },
     "include": [
         "./src/**/*"
