Update travis scripts: run make for both config (development and production)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ services: docker
 
 script:
   - make up
-  - docker-compose exec develop make
+  - docker-compose exec develop make CONFIG=development
+  - docker-compose exec develop make CONFIG=production
   - make down
