--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^23.0.1",
     "source-map-loader": "^0.2.3",
     "ts-jest": "^22.4.6",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "webpack": "^4.8.3",
     "webpack-cli": "^3.0.4",
