Rename make target: tslint -> lint

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services: docker
 script:
   - make up
   - docker-compose exec develop make fetch
-  - docker-compose exec develop make tslint
+  - docker-compose exec develop make lint
   - docker-compose exec develop make build CONFIG=development
   - docker-compose exec develop make build CONFIG=production
   - docker-compose exec develop make test
