--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "source-map-loader": "^0.2.4",
-    "ts-jest": "^22.4.6",
+    "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "webpack": "^4.19.0",
