--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^5.6.0",
+    "eslint-config-google": "^0.10.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "source-map-loader": "^0.2.4",
