--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,36 @@ services:
     build: .
     volumes:
       - .:/usr/src/app
+  selenium-hub:
+    image: selenium/hub:3.14.0-europium
+    container_name: selenium-hub
+    ports:
+      # Can watch state on http://localhost:4444/grid/console
+      - "4444:4444"
+  # chrome:
+  #   image: selenium/node-chrome-debug:3.14.0-europium
+  #   depends_on:
+  #     - selenium-hub
+  #   environment:
+  #     - HUB_HOST=selenium-hub
+  #     - HUB_PORT=4444
+  #   ports:
+  #     - 5900:5900
+  firefox:
+    image: selenium/node-firefox-debug:3.14.0-europium
+    depends_on:
+      - selenium-hub
+    environment:
+      - HUB_HOST=selenium-hub
+      - HUB_PORT=4444
+    ports:
+      # vnc port to access like following:
+      # $ echo 'secret' | vncviewer -autopass 127.0.0.1:5900
+      - 5900:5900
+  python:
+    build:
+      context: .
+      dockerfile: ./dockerfiles/python/Dockerfile
+    working_dir: /usr/src/app
+    volumes:
+      - .:/usr/src/app
