Run e2e test on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script:
   - docker-compose exec develop make build CONFIG=development
   - docker-compose exec develop make build CONFIG=production
   - docker-compose exec develop make test
+  - make e2etest
   - make down
