--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "semantic-ui-react": "^0.82.5",
+    "ts-deepcopy": "^0.1.4",
     "typescript-fsa": "^3.0.0-beta-2",
     "typescript-fsa-reducers": "^0.4.5"
   },
