Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-studies",
+  "name": "complicated-querystring-visualizer",
   "author": "km45",
   "license": "MIT",
   "dependencies": {
