--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./dockerfiles/develop/Dockerfile
     volumes:
       - .:/usr/src/app
+    working_dir: /usr/src/app
   selenium-hub:
     image: selenium/hub:3.14.0-europium
     container_name: selenium-hub
