--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.6.0",
     "eslint-config-google": "^0.10.0",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "source-map-loader": "^0.2.4",
