--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-cli": "^3.1.0"
   },
   "jest": {
     "transform": {
