--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ services:
   - docker
 
 script:
-  - make up
-  - docker-compose exec develop make fetch
-  - docker-compose exec develop make lint
-  - docker-compose exec develop make build CONFIG=production
-  - docker-compose exec develop make test
-  - make e2etest
+  - make up SERVICE='develop python firefox'
+  - make all CONFIG=production
   - make down
