--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "author": "km45",
   "license": "MIT",
   "version": "v3.5.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/km45/complicated-querystring-visualizer.git"
+  },
   "dependencies": {
     "ag-grid-community": "^19.0.0",
     "ag-grid-react": "^19.0.0",
