--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.10"
   },
   "jest": {
     "transform": {
