--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: ./dockerfiles/develop/Dockerfile
+    ports:
+      - 8080:8080
     volumes:
       - .:/usr/src/app
     working_dir: /usr/src/app
