--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@types/react-redux": "^6.0.9",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.1",
     "eslint": "^5.6.0",
     "eslint-config-google": "^0.10.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
