--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.5",
+    "semantic-ui-css": "^2.3.3",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.10"
