Add docker-compose service chrome on travis to run e2e-test for chrome

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 script:
-  - make up SERVICE='develop python firefox'
+  - make up SERVICE='develop python chrome firefox'
   - make clean
   - make sync
   - make audit
