--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - .:/usr/src/app
     working_dir: /usr/src/app
   selenium-hub:
-    image: selenium/hub:3.141.59-fluorine
+    image: selenium/hub:3.141.59-gold
     container_name: selenium-hub
     ports:
       # Can watch state on http://localhost:4444/grid/console
       - "4444:4444"
   chrome:
-    image: selenium/node-chrome:3.141.59-fluorine
+    image: selenium/node-chrome:3.141.59-gold
     depends_on:
       - selenium-hub
     environment:
@@ -28,7 +28,7 @@ services:
     volumes:
       - .:/usr/src/app
   chrome-debug:
-    image: selenium/node-chrome-debug:3.141.59-fluorine
+    image: selenium/node-chrome-debug:3.141.59-gold
     depends_on:
       - selenium-hub
     environment:
@@ -41,7 +41,7 @@ services:
     volumes:
       - .:/usr/src/app
   firefox:
-    image: selenium/node-firefox:3.141.59-fluorine
+    image: selenium/node-firefox:3.141.59-gold
     depends_on:
       - selenium-hub
     environment:
@@ -50,7 +50,7 @@ services:
     volumes:
       - .:/usr/src/app
   firefox-debug:
-    image: selenium/node-firefox-debug:3.141.59-fluorine
+    image: selenium/node-firefox-debug:3.141.59-gold
     depends_on:
       - selenium-hub
     environment:
