--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/km45/complicated-querystring-visualizer.git"
   },
   "dependencies": {
-    "ag-grid-community": "^20.0.0",
-    "ag-grid-react": "^20.0.0",
+    "ag-grid-community": "20.1.0",
+    "ag-grid-react": "20.1.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "pythonic": "^1.0.1",
     "react": "^16.8.3",
