--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.28.1",
     "webpack-cli": "3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "3.2.0"
   },
   "jest": {
     "transform": {
