--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ts-jest": "24.0.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.1",
+    "typescript": "3.3.3333",
     "url-loader": "^1.1.2",
     "webpack": "4.29.5",
     "webpack-cli": "3.2.3",
