--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "tslint": "^5.12.1",
     "typescript": "3.3.3333",
     "url-loader": "^1.1.2",
-    "webpack": "4.29.5",
+    "webpack": "^4.28.1",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.0"
   },
