Run make lint-dockerfile on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
   - docker
 
 script:
+  - make lint-dockerfile
   - make up SERVICE='develop python chrome firefox'
   - make clean
   - make sync
