--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/jest": "24.0.11",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
-    "clean-webpack-plugin": "^1.0.1",
+    "clean-webpack-plugin": "2.0.1",
     "css-loader": "^2.1.0",
     "eslint": "5.15.2",
     "eslint-config-google": "^0.12.0",
