--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
     "clean-webpack-plugin": "2.0.1",
-    "css-loader": "^2.1.0",
+    "css-loader": "2.1.1",
     "eslint": "5.15.2",
     "eslint-config-google": "^0.12.0",
     "html-webpack-externals-plugin": "^3.8.0",
