--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ag-grid-community": "20.1.0",
     "ag-grid-react": "20.1.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
-    "pythonic": "^1.0.1",
+    "pythonic": "2.0.3",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-monaco-editor": "0.24.0",
