--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ag-grid-react": "20.1.1",
     "pythonic": "2.0.3",
     "react": "16.8.4",
+    "react-ace": "6.4.0",
     "react-dom": "16.8.4",
     "semantic-ui-react": "0.86.0"
   },
