--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tslint": "5.14.0",
     "typescript": "3.3.3333",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.1",
+    "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1"
   },
