--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.1",
     "eslint": "5.15.2",
-    "eslint-config-google": "^0.12.0",
-    "html-webpack-externals-plugin": "^3.8.0",
-    "html-webpack-plugin": "^3.2.0",
+    "eslint-config-google": "0.12.0",
+    "html-webpack-externals-plugin": "3.8.0",
+    "html-webpack-plugin": "3.2.0",
     "jest": "24.5.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "semantic-ui-css": "^2.4.1",
-    "source-map-loader": "^0.2.4",
+    "mini-css-extract-plugin": "0.5.0",
+    "semantic-ui-css": "2.4.1",
+    "source-map-loader": "0.2.4",
     "ts-jest": "24.0.0",
-    "ts-loader": "^5.3.3",
+    "ts-loader": "5.3.3",
     "tslint": "5.14.0",
     "typescript": "3.3.3333",
-    "url-loader": "^1.1.2",
+    "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1"
