--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "complicated-querystring-visualizer",
-  "author": "km45",
+  "author": "Shogo Kamei",
   "license": "MIT",
   "version": "v6.0.3",
   "repository": {
