--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,14 @@ services:
       - .:/usr/src/app
     working_dir: /usr/src/app
   selenium-hub:
-    image: selenium/hub:3.141.59-oxygen
+    image: selenium/hub:latest
     expose:
       - "4444"
     ports:
       # Can watch state on http://localhost:${DynamicPort}/grid/console
       - "4444"
   chrome:
-    image: selenium/node-chrome:3.141.59-oxygen
+    image: selenium/node-chrome:latest
     depends_on:
       - selenium-hub
     environment:
@@ -31,7 +31,7 @@ services:
     volumes:
       - .:/usr/src/app
   chrome-debug:
-    image: selenium/node-chrome-debug:3.141.59-oxygen
+    image: selenium/node-chrome-debug:latest
     depends_on:
       - selenium-hub
     environment:
@@ -44,7 +44,7 @@ services:
     volumes:
       - .:/usr/src/app
   firefox:
-    image: selenium/node-firefox:3.141.59-oxygen
+    image: selenium/node-firefox:latest
     depends_on:
       - selenium-hub
     environment:
@@ -53,7 +53,7 @@ services:
     volumes:
       - .:/usr/src/app
   firefox-debug:
-    image: selenium/node-firefox-debug:3.141.59-oxygen
+    image: selenium/node-firefox-debug:latest
     depends_on:
       - selenium-hub
     environment:
