Change author notation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "complicated-querystring-visualizer",
-  "author": "Shogo Kamei",
+  "author": "Kamei Shogo",
   "license": "MIT",
   "version": "v6.2.0",
   "repository": {
