--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "react": "16.8.6",
     "react-ace": "7.0.2",
     "react-dom": "16.8.6",
-    "semantic-ui-react": "0.87.2"
-  },
-  "devDependencies": {
+    "semantic-ui-react": "0.87.2",
     "@types/jest": "24.0.15",
     "@types/react-dom": "16.8.4",
     "@types/react": "16.8.22",
     "clean-webpack-plugin": "2.0.2",
     "css-loader": "3.0.0",
-    "eslint": "6.0.1",
-    "eslint-config-google": "0.13.0",
     "html-webpack-externals-plugin": "3.8.0",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.8.0",
     "mini-css-extract-plugin": "0.7.0",
     "semantic-ui-css": "2.4.1",
-    "source-map-loader": "0.2.4",
-    "ts-jest": "24.0.2",
     "ts-loader": "6.0.4",
-    "tslint": "5.18.0",
     "typescript": "3.5.2",
     "url-loader": "2.0.1",
     "webpack": "4.35.0",
-    "webpack-cli": "3.3.5",
+    "webpack-cli": "3.3.5"
+  },
+  "devDependencies": {
+    "eslint": "6.0.1",
+    "eslint-config-google": "0.13.0",
+    "jest": "24.8.0",
+    "source-map-loader": "0.2.4",
+    "ts-jest": "24.0.2",
+    "tslint": "5.18.0",
     "webpack-dev-server": "3.7.2"
   },
   "jest": {
