--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   },
   "dependencies": {
     "@types/jest": "24.0.15",
-    "@types/react-dom": "16.8.5",
     "@types/react": "16.8.23",
+    "@types/react-dom": "16.8.5",
     "ag-grid-community": "21.1.0",
     "ag-grid-react": "21.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.1.0",
+    "csv-parse": "^4.4.3",
     "html-webpack-externals-plugin": "3.8.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "pythonic": "2.0.3",
+    "react": "16.8.6",
     "react-ace": "7.0.2",
     "react-dom": "16.8.6",
-    "react": "16.8.6",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.87.3",
     "ts-loader": "6.0.4",
     "typescript": "3.5.3",
     "url-loader": "2.1.0",
-    "webpack-cli": "3.3.6",
-    "webpack": "4.38.0"
+    "webpack": "4.38.0",
+    "webpack-cli": "3.3.6"
   },
   "devDependencies": {
     "eslint-config-google": "0.13.0",
