--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.1.0",
     "csv-parse": "^4.4.3",
+    "csv-stringify": "^5.3.0",
     "html-webpack-externals-plugin": "3.8.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
