--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@types/jest": "24.0.18",
-    "@types/react-dom": "16.9.0",
     "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
     "ag-grid-community": "21.2.0",
     "ag-grid-react": "21.2.0",
     "clean-webpack-plugin": "3.0.0",
@@ -19,16 +19,16 @@
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "pythonic": "2.0.3",
+    "react": "16.9.0",
     "react-ace": "7.0.4",
     "react-dom": "16.9.0",
-    "react": "16.9.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.0",
     "ts-loader": "6.0.4",
-    "typescript": "3.6.2",
+    "typescript": "^3.6.4",
     "url-loader": "2.1.0",
-    "webpack-cli": "3.3.8",
-    "webpack": "4.39.3"
+    "webpack": "4.39.3",
+    "webpack-cli": "3.3.8"
   },
   "devDependencies": {
     "eslint-config-google": "0.14.0",
