--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@types/jest": "24.0.18",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "ag-grid-community": "21.2.0",
     "ag-grid-react": "21.2.0",
     "clean-webpack-plugin": "3.0.0",
@@ -19,9 +19,9 @@
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "pythonic": "2.0.3",
-    "react": "16.9.0",
+    "react": "^16.11.0",
     "react-ace": "7.0.4",
-    "react-dom": "16.9.0",
+    "react-dom": "^16.11.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.0",
     "ts-loader": "6.0.4",
