--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "semantic-ui-react": "0.88.0",
     "ts-loader": "6.0.4",
     "typescript": "^3.6.4",
-    "url-loader": "2.1.0",
+    "url-loader": "^2.2.0",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.8"
   },
