--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/jest": "24.0.18",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "ag-grid-community": "21.2.0",
-    "ag-grid-react": "21.2.0",
+    "ag-grid-community": "^21.2.2",
+    "ag-grid-react": "^21.2.2",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.2.0",
     "html-webpack-externals-plugin": "3.8.0",
