--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^16.11.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.0",
-    "ts-loader": "6.0.4",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.6.4",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
