--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/km45/complicated-querystring-visualizer.git"
   },
   "dependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jest": "^24.0.20",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "ag-grid-community": "^21.2.2",
@@ -35,7 +35,7 @@
     "eslint-config-google": "0.14.0",
     "jest": "24.9.0",
     "source-map-loader": "0.2.4",
-    "ts-jest": "24.0.2",
+    "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "webpack-dev-server": "3.8.0"
   },
