--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "source-map-loader": "0.2.4",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
-    "webpack-dev-server": "3.8.0"
+    "webpack-dev-server": "^3.9.0"
   },
   "jest": {
     "transform": {
