--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ag-grid-react": "^21.2.2",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-externals-plugin": "3.8.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
