--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
-    "ag-grid-community": "^21.2.2",
-    "ag-grid-react": "^21.2.2",
+    "ag-grid-community": "22.x",
+    "ag-grid-react": "22.x",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "3.2.0",
     "file-loader": "^4.2.0",
