--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ag-grid-community": "22.x",
     "ag-grid-react": "22.x",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "3.2.0",
+    "css-loader": "^3.2.1",
     "file-loader": "^4.3.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "3.2.0",
