--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "ag-grid-react": "22.x",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^3.2.1",
-    "file-loader": "^4.3.0",
+    "file-loader": "5.x",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
@@ -27,7 +27,7 @@
     "semantic-ui-react": "0.88.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
-    "url-loader": "^2.3.0",
+    "url-loader": "3.x",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
