--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "file-loader": "5.x",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "0.9.x",
     "pythonic": "2.0.3",
     "react": "^16.12.0",
     "react-ace": "8.x",
