--- a/dockerfiles/python/Dockerfile
+++ b/dockerfiles/python/Dockerfile
@@ -1,9 +1,6 @@
 FROM python:3.8-slim
 
-RUN pip install pipenv==2018.11.26
-
-COPY Pipfile Pipfile.lock ./
-
-RUN pipenv install --system && rm Pipfile Pipfile.lock
+# hadolint ignore=DL3013
+RUN pip install selenium pytest
 
 CMD [ "tail", "-f", "/dev/null" ]
