Disable pip cache to reduce docker image size (206MB -> 204MB)

--- a/dockerfiles/python/Dockerfile
+++ b/dockerfiles/python/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.8-slim
 
 # hadolint ignore=DL3013
-RUN pip install selenium pytest
+RUN pip install --no-cache-dir selenium pytest
 
 CMD [ "tail", "-f", "/dev/null" ]
