--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,8 @@
+# explicitly add .eslintrc.js because dotfiles are ignored by default
 !/.eslintrc.js
+
+# fetched packages
+node_modules
+
+# build output
+dist
