--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "0.14.0",
     "jest": "24.9.0",
