--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@typescript-eslint/parser": "^2.15.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "0.14.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "24.9.0",
     "source-map-loader": "0.2.4",
     "ts-jest": "^24.3.0",
