--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-jest": "^23.4.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
