--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
@@ -44,7 +44,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "25.x",
     "source-map-loader": "0.2.4",
-    "ts-jest": "25.x",
+    "ts-jest": "^25.1.0",
     "webpack-dev-server": "^3.10.1"
   },
   "jest": {
