--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/km45/complicated-querystring-visualizer.git"
   },
   "dependencies": {
-    "@types/jest": "^24.9.1",
+    "@types/jest": "25.x",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "ag-grid-community": "^22.1.1",
