--- a/package.json
+++ b/package.json
@@ -8,43 +8,43 @@
     "url": "https://github.com/km45/complicated-querystring-visualizer.git"
   },
   "dependencies": {
-    "@types/jest": "^25.1.3",
-    "@types/react": "^16.9.23",
+    "@types/jest": "^25.1.4",
+    "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^3.4.2",
-    "csv-parse": "^4.8.6",
+    "csv-parse": "^4.8.8",
     "csv-stringify": "^5.3.6",
     "file-loader": "^5.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.9.x",
     "pythonic": "2.0.3",
-    "react": "^16.13.0",
-    "react-ace": "8.x",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-ace": "^8.1.0",
+    "react-dom": "^16.13.1",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "url-loader": "3.x",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-jest": "^23.8.0",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "jest": "25.x",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "jest": "^25.2.4",
     "source-map-loader": "0.2.4",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^25.3.0",
     "webpack-dev-server": "^3.10.3"
   },
   "jest": {
