--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-react-hooks": "3.x",
     "jest": "^25.2.4",
     "source-map-loader": "0.2.4",
     "ts-jest": "^25.3.0",
