--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "csv-stringify": "^5.3.6",
     "file-loader": "^5.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "4.x",
     "mini-css-extract-plugin": "0.9.x",
     "pythonic": "2.0.3",
     "react": "^16.13.1",
