--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
-    "ag-grid-community": "^22.1.1",
-    "ag-grid-react": "^22.1.1",
+    "ag-grid-community": "23.x",
+    "ag-grid-react": "23.x",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "^3.4.2",
     "csv-parse": "^4.8.8",
