--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   develop:
-    image: node:alpine
+    image: node
     command: ["tail", "-f", "/dev/null"]
     environment:
       - HOME=/usr/src/app/cache/develop/home
