--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "@types/jest": "^25.2.1",
-    "@types/react": "^16.9.32",
+    "@types/react": "^16.9.33",
     "@types/react-dom": "^16.9.6",
     "ag-grid-community": "23.x",
-    "ag-grid-react": "23.x",
+    "ag-grid-react": "^23.0.3",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.1",
     "csv-parse": "^4.8.8",
     "csv-stringify": "^5.3.6",
     "file-loader": "6.x",
     "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "0.9.x",
     "pythonic": "2.0.3",
     "react": "^16.13.1",
@@ -29,20 +29,20 @@
     "semantic-ui-react": "^0.88.2",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
-    "url-loader": "4.x",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "3.x",
-    "jest": "^25.2.7",
+    "jest": "^25.3.0",
     "source-map-loader": "0.2.4",
     "ts-jest": "^25.3.1",
     "webpack-dev-server": "^3.10.3"
