--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,4 +15,13 @@ jobs:
       - run: make sync TTY=false
       - run: make update TTY=false
       - run: make outdated TTY=false
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v2
+        with:
+          title: "Update npm packages by create-pull-request action"
+          draft: true
+          branch: create-pull-request/update-npm-packages
+      - name: Check outputs of create-pull-request
+        run: echo "Pull Request Number - ${{ steps.cpr.outputs.pr_number }}"
       - run: make down
