Change workflow trigger to schedule

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,8 @@
 name: update
 
-# on:
-#  schedule:
-#    - cron: "0 19 * * *"
-on: push
+on:
+ schedule:
+   - cron: "0 20 * * *"
 
 jobs:
   build:
