--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^16.13.1",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "ts-loader": "^6.2.2",
+    "ts-loader": "7.x",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
