--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,6 +19,7 @@ jobs:
         uses: peter-evans/create-pull-request@v2
         with:
           title: "Update npm packages by create-pull-request action"
+          reviewers: km45
           branch: create-pull-request/update-npm-packages
       - name: Check outputs of create-pull-request
         run: echo "Pull Request Number - ${{ steps.cpr.outputs.pr_number }}"
