--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       - run: make clean TTY=false
       - run: make sync TTY=false
       - run: make lint TTY=false
+      - run: make check-cpd TTY=false
       - run: make build CONFIG=production TTY=false
       - run: make unit-test TTY=false
       - run: make e2e-test TTY=false
