Execute "make update"

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "url": "https://github.com/km45/complicated-querystring-visualizer.git"
   },
   "dependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/react": "^16.9.35",
+    "@types/jest": "^25.2.3",
+    "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
-    "ag-grid-community": "^23.1.0",
-    "ag-grid-react": "^23.1.0",
+    "ag-grid-community": "^23.2.1",
+    "ag-grid-react": "^23.2.1",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "^3.5.3",
-    "csv-parse": "^4.9.0",
+    "css-loader": "^3.6.0",
+    "csv-parse": "^4.10.1",
     "csv-stringify": "^5.5.0",
     "file-loader": "6.x",
     "hard-source-webpack-plugin": "^0.13.1",
@@ -27,21 +27,21 @@
     "react-dom": "^16.13.1",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "ts-loader": "^7.0.3",
-    "typescript": "^3.8.3",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "7.x",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "eslint": "^7.3.0",
     "eslint-config-google": "0.14.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-jest": "^23.10.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "4.x",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-jest": "^23.13.2",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "26.x",
     "jscpd": "^3.2.1",
     "source-map-loader": "0.2.4",
