Install esbuild-loader and use it for build

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "5.x",
     "csv-parse": "^4.11.1",
     "csv-stringify": "^5.5.0",
+    "esbuild-loader": "^2.8.0",
     "file-loader": "6.x",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.3.0",
